# house-price-pred-ml

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  devcontainer_script.sh  postCreateCommand.sh
notebooks/: 1.0-amds-experimentation.ipynb
reports/: environment.md  experiment_document.md
src/house_price_pred_ml/: __init__.py  auto_gen_table.py  config.py  config.yaml  preprocess_data.py  split_data.py  train.py  utils.py
src/house_price_pred_ml/data/: clean_data.py  ingest_data.py  split_data.py
src/house_price_pred_ml/plot/univariate/: cat_numd.py  numc.py
src/house_price_pred_ml/utils/: functions.py  logger.py  tree.py  tree.yaml
